# envsecure

./: .gitignore  LICENSE  README.md  catalog.json  especificacao_prompt.txt  pyproject.toml  requirements.txt  setup.py
.envsecure/: .gitignore
cli/: main.py
cli/commands/: __init__.py  catalog.py  configure.py  deploy.py  generate_keys.py  init.py  scan.py  validate.py
core/: __init__.py  autofill.py  catalog.py  deployer.py  scanner.py  template.py  validator.py
models/: __init__.py  environment.py  secret.py  variable.py
tests/: test_basic.py
utils/: __init__.py  crypto.py  filesystem.py  ssh.py
